Documentation for New Strategies
This commit adds documentation for the new strategies.

--- a/Calculator/SAR_ADD_COBO.html
+++ b/Calculator/SAR_ADD_COBO.html
@@ -353,5 +353,16 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+</script>
+
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('./PDF_Documentation_Of_Strategies/SAR_ADD_COBO.pdf', '_blank');
+    }
+</script>
 </body>
 </html>
