--- a/Calculator/SAR_ADD_RMB.html
+++ b/Calculator/SAR_ADD_RMB.html
@@ -280,5 +280,14 @@ document.addEventListener('DOMContentLoaded', function() {
 });
     </script>
 
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('./PDF_Documentation_Of_Strategies/SAR_ADD_RMB.pdf', '_blank');
+    }
+</script>
 </body>
 </html>
