--- a/Calculator/SAR_ADD_COBO.html
+++ b/Calculator/SAR_ADD_COBO.html
@@ -353,8 +353,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
-</script>
-
+</body>
 <!-- New button for viewing PDF documentation -->
 <button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
 
@@ -363,6 +362,5 @@ document.addEventListener('DOMContentLoaded', function() {
         // Opens the PDF documentation for the strategy.
         window.open('./PDF_Documentation_Of_Strategies/SAR_ADD_COBO.pdf', '_blank');
     }
-</script>
-</body>
+</script></html>
 </html>
