--- a/Calculator/SAR_SUB_Rounding.html
+++ b/Calculator/SAR_SUB_Rounding.html
@@ -238,14 +238,5 @@
 });
   </script>
 
-
 </body>
-<!-- New button for viewing PDF documentation -->
-<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
-
-<script>
-    function openPdfViewer() {
-        // Opens the PDF documentation for the strategy.
-        window.open('./PDF_Documentation_Of_Strategies/SAR_ADD_SUB_Rounding.pdf', '_blank');
-    }
-</script></html>
+</html>
