--- a/Calculator/SAR_ADD_CHUNKING.html
+++ b/Calculator/SAR_ADD_CHUNKING.html
@@ -398,4 +398,13 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
 </body>
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('../SAR_ADD_CHUNKING.pdf', '_blank');
+    }
+</script>
 </html>
