--- a/Calculator/SMR_DIV_Dealing_By_Ones.html
+++ b/Calculator/SMR_DIV_Dealing_By_Ones.html
@@ -241,6 +241,16 @@
 
     </script>
 
+    <!-- New button for viewing PDF documentation -->
+    <button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+    <script>
+        function openPdfViewer() {
+            // Opens the PDF documentation for the strategy.
+            window.open('../SMR_DIV_Dealing_By_Ones.pdf', '_blank');
+        }
+    </script>
+
 </div> <!-- End Container -->
 </body>
 </html>
