--- a/Calculator/SAR_ADD_COBO.html
+++ b/Calculator/SAR_ADD_COBO.html
@@ -353,5 +353,15 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('../SAR_ADD_COBO.pdf', '_blank');
+    }
+</script>
+
 </body>
 </html>
