--- a/Calculator/SMR_MULT_Commutative_Reasoning.html
+++ b/Calculator/SMR_MULT_Commutative_Reasoning.html
@@ -41,6 +41,16 @@
         <!-- Output will be displayed here -->
     </div>
 
+    <!-- New button for viewing PDF documentation -->
+    <button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+    <script>
+        function openPdfViewer() {
+            // Opens the PDF documentation for the strategy.
+            window.open('../SMR_MULT_Commutative_Reasoning.pdf', '_blank');
+        }
+    </script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const commuteOutputElement = document.getElementById('commuteOutput');
