--- a/Calculator/SMR_MULT_DR.html
+++ b/Calculator/SMR_MULT_DR.html
@@ -288,5 +288,15 @@ document.addEventListener('DOMContentLoaded', function() {
 });
     </script>
 
+    <!-- New button for viewing PDF documentation -->
+    <button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+    <script>
+        function openPdfViewer() {
+            // Opens the PDF documentation for the strategy.
+            window.open('../SMR_MULT_DR.pdf', '_blank');
+        }
+    </script>
+
 </body>
 </html>
