--- a/Calculator/SMR_Multiplication_Coordinating_Two_Counts.html
+++ b/Calculator/SMR_Multiplication_Coordinating_Two_Counts.html
@@ -167,5 +167,15 @@
 
     </script>
 
+    <!-- New button for viewing PDF documentation -->
+    <button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+    <script>
+        function openPdfViewer() {
+            // Opens the PDF documentation for the strategy.
+            window.open('../SMR_Multiplication_Coordinating_Two_Counts.pdf', '_blank');
+        }
+    </script>
+
 </body>
 </html>
