--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -162,10 +162,8 @@
 
     <script>
         function openPdfDocumentation() {
-            // *** IMPORTANT: Replace 'path/to/your/documentation.pdf' with the actual path to your PDF file ***
-            // Example: If it's in the same folder, just use 'documentation.pdf'
-            // Example: If it's in a subfolder called 'docs', use 'docs/documentation.pdf'
-            window.open('../PDF_Documentation_Of_Strategies/SAR_SUB_COBO.pdf', '_blank'); // Opens in a new tab
+            // Updated to point to combined_strategies_and_automata.pdf in the same folder
+            window.open('combined_strategies_and_automata.pdf', '_blank'); // Opens in a new tab
         }
     </script>
 
