Relink some content
Minor adjustments

--- a/Calculator/presentation.html
+++ b/Calculator/presentation.html
@@ -627,7 +627,7 @@
              <a href="Presentation_Next_Steps.html" class="resource-link">Next Steps for the Project</a>
              <a href="Incompatibility_Semantics.html" class="resource-link">Incompatibility Semantics & Mathematical Foundations</a>
              <a href="Emergent_Behavior.html" class="resource-link">Emergent Behavior in Automata</a>
-             <a href="A_Foundational_Star_DRAFT_CHAPTER.pdf" class="resource-link" id="ref-star">Paper: A Foundational Star [.pdf]</a>
+             <a href="https://tiosavich.github.io/UMEDCTA/Calculator/A_Foundational_Star_DRAFT_CHAPTER.pdf" class="resource-link" id="ref-star">Paper: A Foundational Star [.pdf]</a>
              <p>Thank you for your attention. Questions?</p>
              <p>Contact: <span class="contact-info">tmsavich AT iu DOT edu</span></p>
         </section>
