--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -150,10 +150,12 @@
             <button class="calc-button" onclick="window.location.href='AceofBases/index.html'">Ace of Base</button>
 
             <!-- Placeholder for empty grid slots if needed, or add more buttons -->
-             <button class="calc-button" disabled style="background-color: #b0b0b0; cursor: default; box-shadow: inset 1px 1px 3px rgba(0,0,0,0.2);"></button>
+            <button class="calc-button" onclick="window.location.href='presentation.html'">IMERS 2025 Presentation</button>
              <button class="calc-button" disabled style="background-color: #b0b0b0; cursor: default; box-shadow: inset 1px 1px 3px rgba(0,0,0,0.2);"></button>
 
+            
 
+             
         </div>
 
         <button id="pdf-button" onclick="openPdfDocumentation()">More Complex Representations (PDF)</button>
