--- a/Calculator/SAR_ADD_ABAO.html
+++ b/Calculator/SAR_ADD_ABAO.html
@@ -458,7 +458,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SAR_ADD_ABAO.pdf', '_blank');
+        window.open('./SAR_ADD_ABAO.pdf', '_blank');
     }
 </script>
 
