--- a/Calculator/SAR_ADD_COBO.html
+++ b/Calculator/SAR_ADD_COBO.html
@@ -359,7 +359,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SAR_ADD_COBO.pdf', '_blank');
+        window.open('https://tiosavich.github.io/UMEDCTA/Calculator/SAR_ADD_COBO.pdf', '_blank');
     }
 </script>
 
