--- a/Calculator/SAR_ADD_RMB.html
+++ b/Calculator/SAR_ADD_RMB.html
@@ -414,7 +414,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // New function for opening PDF documentation
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SAR_ADD_RMB.pdf', '_blank');
+        window.open('./SAR_ADD_RMB.pdf', '_blank');
     }
 
 });
