--- a/Calculator/SMR_DIV_Strategic_Trials.html
+++ b/Calculator/SMR_DIV_Strategic_Trials.html
@@ -232,7 +232,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SMR_DIV_Strategic_Trials.pdf', '_blank');
+        window.open('./SMR_DIV_Strategic_Trials.pdf', '_blank');
     }
 </script>
 
