--- a/Calculator/SMR_MULTIPLICATION_Strategic_Counting.html
+++ b/Calculator/SMR_MULTIPLICATION_Strategic_Counting.html
@@ -70,7 +70,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SMR_MULTIPLICATION_Strategic_Counting.pdf', '_blank');
+        window.open('./SMR_MULTIPLICATION_Strategic_Counting.pdf', '_blank');
     }
 </script>
 
