--- a/Calculator/SMR_MULT_DR.html
+++ b/Calculator/SMR_MULT_DR.html
@@ -294,7 +294,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <script>
         function openPdfViewer() {
             // Opens the PDF documentation for the strategy.
-            window.open('../SMR_MULT_DR.pdf', '_blank');
+            window.open('./SMR_MULT_DR.pdf', '_blank');
         }
     </script>
 
