--- a/Calculator/SMR_Multiplication_Coordinating_Two_Counts.html
+++ b/Calculator/SMR_Multiplication_Coordinating_Two_Counts.html
@@ -173,7 +173,7 @@
     <script>
         function openPdfViewer() {
             // Opens the PDF documentation for the strategy.
-            window.open('../SMR_Multiplication_Coordinating_Two_Counts.pdf', '_blank');
+            window.open('./SMR_Multiplication_Coordinating_Two_Counts.pdf', '_blank');
         }
     </script>
 
