--- a/Calculator/SAR_ADD_Rounding.html
+++ b/Calculator/SAR_ADD_Rounding.html
@@ -40,7 +40,7 @@
     <script>
         function openPdfViewer() {
             // Opens the PDF documentation for the strategy.
-            window.open('../SAR_ADD_ROUNDING.pdf', '_blank');
+            window.open('./SAR_ADD_ROUNDING.pdf', '_blank');
         }
     </script>
 
