--- a/Calculator/SAR_SUB_COBO.html
+++ b/Calculator/SAR_SUB_COBO.html
@@ -332,7 +332,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SAR_SUB_COBO.pdf', '_blank');
+        window.open('./SAR_SUB_COBO.pdf', '_blank');
     }
 </script>
 </html>
