--- a/Calculator/SAR_SUB_Decomposition.html
+++ b/Calculator/SAR_SUB_Decomposition.html
@@ -66,7 +66,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('../SAR_SUB_Decomposition.pdf', '_blank');
+        window.open('./SAR_SUB_Decomposition.pdf', '_blank');
     }
 </script>
 
