--- a/Calculator/SAR_ADD_CHUNKING.html
+++ b/Calculator/SAR_ADD_CHUNKING.html
@@ -409,7 +409,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('./SAR_ADD_CHUNKING.pdf', '_blank');
+        window.open('./SAR_ADD_Chunking.pdf', '_blank');
     }
 </script>
 </html>
