--- a/Calculator/SAR_SUB_CHUNKING.html
+++ b/Calculator/SAR_SUB_CHUNKING.html
@@ -488,5 +488,12 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('https://tiosavich.github.io/UMEDCTA/Calculator/SAR_SUB_CHUNKING.pdf', '_blank');
+    }
+</script>
+
 </body>
 </html>
