--- a/Calculator/SMR_DIV_IDP.html
+++ b/Calculator/SMR_DIV_IDP.html
@@ -224,7 +224,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('./SMR_DIV_IDP.pdf', '_blank');
+        window.open('./SMR_DIV_Inverse_of_Distributive_Reasoning.pdf', '_blank');
     }
 </script>
 
