--- a/Calculator/SAR_SUB_Rounding.html
+++ b/Calculator/SAR_SUB_Rounding.html
@@ -260,7 +260,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('./SAR_SUB_Rounding.pdf', '_blank');
+        window.open('./SAR_SUB_ROUNDING.pdf', '_blank');
     }
 </script>
 
