--- a/Calculator/SAR_SUB_Sliding.html
+++ b/Calculator/SAR_SUB_Sliding.html
@@ -171,7 +171,7 @@
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
-        window.open('./SAR_SUB_Sliding.pdf', '_blank');
+        window.open('./SAR_SUB_SLIDING.pdf', '_blank');
     }
 </script>
 
