--- a/Calculator/SMR_DIV_CGOB.html
+++ b/Calculator/SMR_DIV_CGOB.html
@@ -288,5 +288,15 @@
   runCGOBDivAutomaton();
 </script>
 
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('https://tiosavich.github.io/UMEDCTA/Calculator/SMR_DIV_Conversion_to_Groups_Other_than_Bases.pdf', '_blank');
+    }
+</script>
+
 </body>
 </html>
