--- a/Calculator/SMR_DIV_UCR.html
+++ b/Calculator/SMR_DIV_UCR.html
@@ -278,5 +278,14 @@
     </script>
 
 </div> <!-- End Container -->
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('./SMR_DIV_UCR.pdf', '_blank');
+    }
+</script>
 </body>
 </html>
