--- a/Calculator/SMR_Multiplication_CBO.html
+++ b/Calculator/SMR_Multiplication_CBO.html
@@ -293,6 +293,16 @@
 
     }); // End DOMContentLoaded
 </script>
+ <!-- New button for viewing PDF documentation -->
+ <button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+ <script>
+     function openPdfViewer() {
+         // Opens the PDF documentation for the strategy.
+         window.open('./SMR_MULT_CBO.pdf', '_blank');
+     }
+ </script>
 
 </body>
+
 </html>
