--- a/Calculator/SAR_SUB_CHUNKING.html
+++ b/Calculator/SAR_SUB_CHUNKING.html
@@ -488,6 +488,9 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
 <script>
     function openPdfViewer() {
         // Opens the PDF documentation for the strategy.
