--- a/Calculator/counting.html
+++ b/Calculator/counting.html
@@ -220,5 +220,14 @@
 
     </script>
 
+<!-- New button for viewing PDF documentation -->
+<button onclick="openPdfViewer()">Want to learn more about this strategy? Click here.</button>
+
+<script>
+    function openPdfViewer() {
+        // Opens the PDF documentation for the strategy.
+        window.open('./counting.pdf', '_blank');
+    }
+</script>
 </body>
 </html>
