--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -148,9 +148,9 @@
             <!-- Other/Fundamental -->
             <button class="calc-button" onclick="window.location.href='counting.html'">Counting</button>
             <button class="calc-button" onclick="window.location.href='Calculator/AceofBases/index.html'">Ace of Base</button>
-
+            <button class="calc-button" onclick="window.location.href='Calculator/presentation.html'">IMERS 2025</button>
             <!-- Placeholder for empty grid slots if needed, or add more buttons -->
-             <button class="calc-button" disabled style="background-color: #b0b0b0; cursor: default; box-shadow: inset 1px 1px 3px rgba(0,0,0,0.2);"></button>
+            
              <button class="calc-button" disabled style="background-color: #b0b0b0; cursor: default; box-shadow: inset 1px 1px 3px rgba(0,0,0,0.2);"></button>
 
 
