HC paper linked
The paper for the Hermeneutic Calculator is linked

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -158,14 +158,14 @@
              
         </div>
 
-        <button id="pdf-button" onclick="openPdfDocumentation()">More Complex Representations (PDF)</button>
+        <button id="pdf-button" onclick="openPdfDocumentation()">Draft paper: The Hermeneutic Calculator (PDF)</button>
 
     </div>
 
     <script>
         function openPdfDocumentation() {
             // Updated to point to combined_strategies_and_automata.pdf in the same folder
-            window.open('Combined_Strategies_and_Automata.pdf', '_blank'); // Opens in a new tab
+            window.open('./Hermeneutic_Calculator.pdf', '_blank'); // Opens in a new tab
         }
     </script>
 
