--- a/More_Machine/index.html
+++ b/More_Machine/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix Automaton</title>
-    <link rel="stylesheet" href="../style.css">
+    <style>
+        .matrix-row {
+            display: flex;
+            margin-bottom: 5px;
+        }
+        .matrix-cell {
+            margin: 0 5px;
+            padding: 5px;
+            border: 1px solid black;
+            width: 20px;
+            text-align: center;
+        }
+    </style>
     <script>
         let matrix = [[1]];
         let size = 1;
