--- a/Calculator/Emergent_Behavior.html
+++ b/Calculator/Emergent_Behavior.html
@@ -4,7 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergent Behavior in Automata - Theodore M. Savich</title>
-    <link rel="stylesheet" href="../style.css">
+    <style>
+        /* General styling */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
+            background-color: #f8f8f8;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 2em;
+            padding-bottom: 1em;
+            border-bottom: 2px solid #4a4a6a;
+        }
+
+        h1, h2, h3, h4 {
+            color: #4a4a6a;
+            margin-top: 1.5em;
+        }
+
+        h1 {
+            font-size: 1.8em;
+            margin-top: 0.8em;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 0.3em;
+        }
+
+        /* Abstract styling */
+        .abstract {
+            background-color: #f0f0f7;
+            padding: 1.5em;
+            border-left: 4px solid #4a4a6a;
+            margin: 2em 0;
+        }
+
+        /* Table styling */
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin: 1.5em 0;
+            font-size: 0.9em;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px 12px;
+        }
+
+        th {
+            background-color: #e6e6ef;
+            text-align: left;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f5f5f5;
+        }
+
+        /* Code block styling */
+        pre {
+            background-color: #f5f5f5;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 1em;
+            overflow-x: auto;
+            font-family: Consolas, Monaco, 'Courier New', monospace;
+            line-height: 1.4;
+        }
+        
+        code {
+            font-family: Consolas, Monaco, 'Courier New', monospace;
+            background-color: #f0f0f0;
+            padding: 2px 4px;
+            border-radius: 3px;
+        }
+
+        /* Prolog syntax highlighting */
+        .comment { color: #008000; }
+        .directive { color: #800000; font-weight: bold; }
+        .predicate { color: #0000FF; }
+        .variable { color: #B00060; }
+        .symbol { color: #000080; }
+        .number { color: #009999; }
+        .string { color: #a31515; }
+        .operator { color: #666600; }
+
+        /* List styling */
+        ul, ol {
+            padding-left: 1.5em;
+        }
+
+        li {
+            margin-bottom: 0.5em;
+        }
+
+        /* Figures and images */
+        figure {
+            margin: 1.5em 0;
+            text-align: center;
+        }
+
+        figcaption {
+            font-style: italic;
+            font-size: 0.9em;
+            margin-top: 0.5em;
+            color: #666;
+        }
+
+        /* References */
+        .references {
+            margin-top: 2em;
+            border-top: 1px solid #ddd;
+            padding-top: 1em;
+        }
+    </style>
 </head>
 <body>
     <header>
