--- a/Quadrilateral_Substitution/inferential_strength.html
+++ b/Quadrilateral_Substitution/inferential_strength.html
@@ -3,7 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <title>Brandom Ch 4: Why Singular Terms?</title>
-    <link rel="stylesheet" href="../style.css">
+    <!-- Link rel="stylesheet" href="brandom_styles.css" --> <!-- Link to your CSS file -->
+    <style>
+        /* Basic Styles */
+        body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f8f9fa; color: #212529; }
+        header { background-color: #343a40; color: #fff; padding: 1.2em 0; text-align: center; margin-bottom: 2em; }
+        main { max-width: 950px; margin: 2em auto; padding: 2em; background-color: #fff; box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1); border-radius: 8px; }
+        .module { border: 1px solid #dee2e6; padding: 1.5em 2em; margin-bottom: 2.5em; background-color: #fff; transition: opacity 0.4s ease-in-out; border-radius: 5px;}
+        .current-module { display: block; opacity: 1; }
+        .hidden-module { display: none; opacity: 0; }
+
+        /* Typography and Structure */
+        h1, h2, h3, h4 { color: #343a40; }
+        h2 { border-bottom: 2px solid #ced4da; padding-bottom: 0.4em; margin-top: 0; margin-bottom: 1em;}
+        h3 { border-bottom: 1px solid #e9ecef; padding-bottom: 0.3em; margin-top: 1.5em;}
+        h4 { margin-top: 1.2em; color: #495057; }
+        p { margin-bottom: 1em; }
+        ul, ol { margin-bottom: 1em; padding-left: 1.5em; }
+        li { margin-bottom: 0.5em; }
+        code, .term { font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace; background-color: #e9ecef; padding: 0.2em 0.4em; border-radius: 3px; font-size: 0.9em; }
+        .concept { font-weight: bold; color: #0056b3; }
+
+        /* Explanations and Examples */
+        .explanation { background: #f1f3f5; padding: 1em; border: 1px solid #dee2e6; border-left: 5px solid #6c757d; margin-top: 1.2em; font-size: 0.95em; border-radius: 0 4px 4px 0; }
+        .example { border-left: 4px solid #17a2b8; padding-left: 1em; margin: 1.2em 0; font-style: italic; background-color: #f8f9fa; padding: 0.8em; border-radius: 4px;}
+
+        /* Interactive Elements */
+        .interactive-area { margin: 1.5em 0; padding: 1.5em; border: 1px dashed #adb5bd; background-color: #fdfdfe; border-radius: 5px;}
+        label { margin-right: 0.5em; display: inline-block; min-width: 150px; font-weight: 500; }
+        select, input[type=range], button { font-size: 1em; padding: 0.4em; margin: 0.5em 0; vertical-align: middle; border-radius: 4px; border: 1px solid #ced4da; }
+        input[type=range] { width: 50%; margin: 0 0.5em;}
+        button { cursor: pointer; background-color: #6c757d; color: white; border: none; padding: 0.5em 1em; transition: background-color 0.2s; }
+        button:hover:not(:disabled) { background-color: #5a687d; }
+        button:disabled { cursor: not-allowed; opacity: 0.6; }
+
+        /* Navigation */
+        #navigation { text-align: center; margin-top: 2.5em; padding-bottom: 2em; }
+        #navigation button { padding: 0.7em 1.5em; margin: 0 1em; background-color: #007bff; font-size: 1em; }
+        #navigation button:hover:not(:disabled) { background-color: #0056b3; }
+        #navigation button:disabled { background-color: #6c757d; }
+        #moduleIndicator { font-weight: bold; color: #555; margin: 0 1em; }
+
+        /* Visualization */
+        .viz-container { display: flex; align-items: center; justify-content: center; gap: 1em; margin: 1.5em 0; flex-wrap: wrap; padding: 15px; background-color: #e9ecef; border-radius: 5px;}
+        .shape-viz svg { border: 1px solid #ced4da; background-color: white; border-radius: 3px;}
+        .arrow { font-size: 1.8em; margin: 0 0.8em; color: #495057; }
+
+        /* Status Indicators */
+        .status-indicator { font-weight: bold; padding: 0.3em 0.6em; border-radius: 4px; display: inline-block; margin-left: 0.5em; font-size: 0.9em; }
+        .valid { color: #155724; background-color: #d4edda; border: 1px solid #c3e6cb; }
+        .invalid { color: #721c24; background-color: #f8d7da; border: 1px solid #f5c6cb; }
+
+        /* Substitution Styles */
+        .frame-style { color: #495057; background-color: #e9ecef; padding: 0.2em 0.4em; border: 1px solid #ced4da; border-radius: 3px; font-family: monospace; }
+        .substituted-for-style { color: #0056b3; font-weight: bold; border-bottom: 2px solid #0056b3; }
+        .substituting-style { color: #28a745; font-weight: bold; border-bottom: 2px solid #28a745; }
+        .expression-box { display: inline-block; padding: 0.3em 0.6em; border: 1px solid #dee2e6; background-color: #fff; border-radius: 4px; margin: 0 0.5em; min-width: 80px; text-align: center; transition: transform 0.3s ease-out, opacity 0.3s ease-out; }
+        .sentence-display .substituted-part { display: inline-block; background-color: #e7f5ff; padding: 0 3px; border-radius: 2px; border: 1px dashed #99cfff; }
+        .sentence-display .substituting-part { display: inline-block; background-color: #e6ffe6; padding: 0 3px; border-radius: 2px; border: 1px dashed #a3e9a4; opacity: 0; }
+
+        /* Animation Classes */
+        .highlight-replace { box-shadow: 0 0 8px 2px rgba(0, 86, 179, 0.6); }
+        .lift-out { transform: translateY(-8px) scale(1.03); opacity: 0.7; }
+        .fade-out { opacity: 0 !important; transform: translateY(-15px) scale(0.9); }
+        .move-in { opacity: 1 !important; transform: translateY(0) scale(1); }
+
+        /* Matrix Table */
+        .matrix-table { border-collapse: collapse; width: 100%; margin: 1.5em 0; font-size: 0.9em; }
+        .matrix-table th, .matrix-table td { border: 1px solid #dee2e6; padding: 10px; text-align: left; vertical-align: top;}
+        .matrix-table th { background-color: #e9ecef; color: #495057; }
+        .matrix-table td ul { padding-left: 1.2em; margin-top: 0.5em;}
+
+        /* Info Icons & Tooltips (Basic) */
+        .info-icon { display: inline-block; width: 18px; height: 18px; background-color: #0d6efd; color: white; border-radius: 50%; text-align: center; font-size: 12px; line-height: 18px; cursor: help; margin-left: 5px; font-weight: bold; vertical-align: middle; position: relative; }
+        .tooltip-text { visibility: hidden; width: 220px; background-color: #343a40; color: #fff; text-align: left; border-radius: 6px; padding: 8px; position: absolute; z-index: 1; bottom: 130%; /* Position above the icon */ left: 50%; margin-left: -110px; /* Center the tooltip */ opacity: 0; transition: opacity 0.3s; font-size: 0.9em; font-weight: normal; box-shadow: 0 2px 5px rgba(0,0,0,0.3); }
+        .info-icon:hover .tooltip-text { visibility: visible; opacity: 1; }
+    </style>
 </head>
 <body>
     <header>
